<resources>
    <string name="app_name">Cosmos_Android</string>
    <string name="this_is_splash_activity" />
    <string name="tab_chat">CHAT</string>
    <string name="tab_status">STATUS</string>
    <string name="tab_calls">CALLS</string>
    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <string name="signup">Sign up for an account?</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="take_a_test">Take a test ?</string>
    <string name="recently_viewd">Recently Viewed Codes</string>
    <string name="codes_for_second">Codes for second Review</string>
    <string name="recommended_codes">Recommended Codes</string>
    <string name="random_codes">Random Codes</string>
    <string name="ask_for_live_help">Ask for live Help!</string>
</resources>
